# i3-insert-workspace

./: Cargo.toml  LICENSE  README.md
src/: docker_name.rs  insert_workspace.rs  insert_workspace_rename.rs  insert_workspace_swap.rs  main.rs  util.rs
tools/: simplify_tree.py
