[package]
name = "i3-insert-workspace"
description = "Tool for flexible creation of named workspaces in the i3 window manager"
version = "1.3.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/corrodedHash/i3-insert-workspace"
readme = "README.md"
keywords = ["i3", "i3ipc", "workspace"]
categories = ["command-line-utilities", "config"]

[dependencies]
i3ipc = "0.10.1"
clap = {version = "4.4.6", features = ["derive"]}
rand = "0.8.5"
thiserror = "1.0.49"

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
